// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When productsList array passed to ProductsList is null should not crash 1`] = `
<table
  border="1px"
  className="products-table"
>
  <thead>
    <tr>
      <th>
        ID
      </th>
      <th>
        Product Name
      </th>
      <th>
        Quantity
      </th>
      <th>
        Price
      </th>
    </tr>
  </thead>
  <tbody />
</table>
`;

exports[`When productsList array passed to ProductsList should not crash 1`] = `
<table
  border="1px"
  className="products-table"
>
  <thead>
    <tr>
      <th>
        ID
      </th>
      <th>
        Product Name
      </th>
      <th>
        Quantity
      </th>
      <th>
        Price
      </th>
    </tr>
  </thead>
  <tbody>
    <Product
      id="1"
      key="1"
      name="product-1"
      price="300"
      quantity={4}
    />
    <Product
      id="2"
      key="2"
      name="product-2"
      price="400"
      quantity={3}
    />
    <Product
      id="3"
      key="3"
      name="product-3"
      price="1000"
      quantity={5}
    />
    <Product
      id="4"
      key="4"
      name="product-4"
      price="100"
      quantity={8}
    />
    <Product
      id="5"
      key="5"
      name="product-5"
      price="200"
      quantity={2}
    />
  </tbody>
</table>
`;
